Fix accessibility contrast issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 /* Global Styles */
 
 body {
-  background-color: #f8f8ff;
+  background-color: #f8f9fa;
 }
 
 .golden-button {
@@ -54,6 +54,7 @@ body {
   min-height: 80vh;
   position: relative;
   color: white;
+  background-color: #9c8300;
 }
 
 .color-overlay {
